# Deep_Researcher

./: LICENSE  README.md
api/: .gitignore  api.py  pyproject.toml  test_document_search.ipynb  test_graph.ipynb  test_retriever.ipynb
api/assistant/: configuration.py  graph.py  main.py  prompts.py  state.py  utils.py  vectorstore.py
api/parsed_documents/: A_Method_for_Comparing_the_Fatigue_Performance_of_Forged.pkl  Characterization_of_forged_magnesium_alloys.pkl  Fatigue_of_Forged_AZ80_Magnesium_Alloy.pkl  Microstructure_and_texture_evolution_during_hot_deformation_of_AZ80_magnesium_alloy.pkl
client/: README
client/_commits/0/_backup/src/app/api/chat/: route.ts
client/_commits/0/_backup/src/components/chat/: chat-bottombar.tsx  chat-list.tsx
client/_commits/1/: LICENSE
client/_commits/1/src/app/: layout.tsx
client/_commits/1/src/components/chat/: chat-list.tsx
client/_commits/2/: .env.example  Dockerfile  LICENSE  api.py
client/_commits/2/src/app/: layout.tsx
client/_commits/2/src/app/api/chat/: route_v1.ts
client/_commits/2/src/components/: sidebar.tsx
client/_commits/2/src/components/chat/: chat-list.tsx  chat.tsx
client/_commits/3/src/app/api/models/: route.ts
client/_commits/3/src/app/api/upload/: route.ts
client/_commits/3/src/components/: sidebar-tabs.tsx  sidebar.tsx
client/_commits/3/src/components/chat/: chat-bottombar.tsx
client/src/app/api/chat/: route.ts
client/src/app/api/settings/: route.ts
client/src/components/: upload-button.tsx
client/src/components/chat/: chat-bottombar_0.tsx
